# aidan-lib

./: pyproject.toml
src/aidan_lib/: __init__.py
src/aidan_lib/models/: __init__.py  dino_lib.py
