[project]
name = "aidan-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aidan Dempster", email = "aidan.dempster@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "pydantic>=2.13.2",
    "torch==2.9.1",
    "torchvision>=0.24.1",
]

[project.optional-dependencies]
hf = [
    "transformers>=5.5.4",
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
